backport: re PR c++/28301 (ICE with broken specialization)

gcc/cp/

2009-04-10  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-04-10  Jason Merrill  <jason@redhat.com>

	PR c++/28301
	* parser.c (cp_parser_skip_to_end_of_block_or_statement): Return
	if we see a close brace without an open brace.

gcc/testsuite/

2009-04-10  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-04-10  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/28301
	* g++.dg/cpp0x/enum2.C: Updated.
	* g++.dg/debug/pr22514.C: Likewise.
	* g++.dg/parse/enum2.C: Likewise.
	* g++.dg/parse/enum3.C: Likewise.
	* g++.dg/template/crash79.C: Likewise.
	* g++.old-deja/g++.jason/cond.C: Likewise.

	* g++.dg/template/pr28301.C: New.

From-SVN: r145938